rename test runner

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "start": "next start",
-    "test": "pnpm test:unit && pnpm test:e2e",
+    "test": "vitest run",
+    "test:all": "pnpm test:unit && pnpm test:e2e",
     "test:unit": "vitest run",
     "test:unit:watch": "vitest",
     "test:e2e": "start-server-and-test dev 3000 \"NODE_ENV=test playwright test\"",
