--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "lucide-react": "^0.211.0",
     "next": "^13.2.4",
     "next-auth": "^4.21.1",
+    "openai": "^3.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
