replace next-auth with clerk

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,5 @@
     ["cva\\(([^)]*)\\)", "[\"'`]([^\"'`]*).*?[\"'`]"]
   ],
   "typescript.tsdk": "node_modules/typescript/lib",
-  "cSpell.words": ["OPENAI"]
+  "cSpell.words": ["middlewares", "OPENAI", "runtimes"]
 }
