--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "ts:check": "tsc --noEmit"
   },
   "dependencies": {
+    "@clerk/nextjs": "^4.17.1",
     "@hookform/resolvers": "^3.0.0",
-    "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.12.0",
     "@radix-ui/react-avatar": "^1.0.2",
     "@radix-ui/react-dialog": "^1.0.3",
@@ -36,7 +36,6 @@
     "clsx": "^1.2.1",
     "lucide-react": "^0.211.0",
     "next": "^13.2.4",
-    "next-auth": "^4.21.1",
     "openai": "^3.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
